--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Test Stellar SDK",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "devStart": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,10 +21,14 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcrypt": "^3.0.8",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "mongoose": "^5.9.0",
     "stellar-sdk": "^4.0.0"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.2"
   }
 }
